--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
 
     <h1>This is going to be my first conflict.</h1>
     <h2>LEt's go baby!</h2>
+    <h3>Can i commit in your git branch - Answer is I cannot</h3>
 </body>
 </html>
